# file-explorer-plugin

./: Cargo.toml
src/: lib.rs
